newtype-tools/tests/newtype-fail/newtype-nested-path-invalid.stderr
error: expected `(try_)from`, `(try_)into`, `add(_assign)`, `partial_eq`, `sub`, `iter`
 --> tests/newtype-fail/newtype-nested-path-invalid.rs:2:11
  |
2 | #[newtype(invalid_path)]
  |           ^^^^^^^^^^^^
